# tap-newrelic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tap_newrelic.py  tap_newrelic_apirequest.py
tests/: test_tap.py
