[tool.poetry]
name = "tap-newrelic"
version = "0.1.0"
description = "Singer tap for New Relic ApiRequestEvent via NerdGraph NRQL"
authors = ["rhodium-data <developers@rhodium-data.com>"]
license = "MIT"
readme = "README.md"
keywords = ["ELT", "Singer", "NewRelic", "NerdGraph"]

[tool.poetry.dependencies]
python  = ">=3.9,<3.13"
requests = ">=2.25,<3"
urllib3  = ">=1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires      = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-newrelic = "tap_newrelic:main"
